Qalculate changelog:
--------------------

trunk:
- bump copyright to 2018
- fix issues with applet size in recent KDE versions
- fix issues with image/logo in recent KDE versions

v0.4.0:
- add support for libqalculate v2.0.0
- change license to MIT
- bump copyright to 2017
- add .clang-format file for C++ plugin and format accordingly

v0.3.1:
- history is now always initialized properly

v0.3:
New features:
- Add support for history, which can be disabled in the options
  The following keys are available:
  <UP> - Previous history entry
  <DOWN> -  Next history entry
  <PAGE UP> - First history entry
  <PAGE DOWN> - Last history entry
  <CTRL + C> - Clear input
Bug fixes:
- create only a single C++ wrapper object

v0.2:
- make icon configurable
- add busy indicator
- make calculations run in background
- require at least libqalculate-0.9.8

v0.1.1:
- add spanish translation by Obed González

v0.1:
- initial version